--- a/dev/examples/docs_4_rational_opt/index.html
+++ b/dev/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   8.981161e-01   1.113442e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   8.993148e-01   2.223915e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   9.006399e-01   3.330965e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   9.024735e-01   4.432263e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   9.044612e-01   5.528153e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   9.071207e-01   6.614335e+01
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   9.101004e-01   7.691459e+01
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   9.134768e-01   8.757748e+01
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   9.179397e-01   9.804565e+01
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   9.218334e-01   1.084795e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   9.233429e-01   1.093851e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.201953e-01   1.922355e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.209724e-01   3.838975e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   5.219629e-01   5.747535e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   5.231367e-01   7.646184e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   5.245921e-01   9.531216e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   5.263311e-01   1.139967e+02
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   5.283727e-01   1.324822e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   5.306297e-01   1.507643e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   5.330701e-01   1.688333e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   5.358241e-01   1.866284e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   5.367913e-01   1.881551e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   4.372177e-01   2.287190e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   4.386281e-01   4.559672e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   4.401065e-01   6.816532e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   4.424044e-01   9.041501e+01
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.449362e-01   1.123757e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.480797e-01   1.339047e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.514169e-01   1.550673e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.552423e-01   1.757306e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.594812e-01   1.958731e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.644898e-01   2.152900e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.656235e-01   2.147658e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   2.915704e-01   3.429703e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   2.924550e-01   6.838658e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   2.935892e-01   1.021836e+02
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   2.950622e-01   1.355646e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   2.968668e-01   1.684257e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   2.990078e-01   2.006637e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.014529e-01   2.322088e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.042443e-01   2.629466e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.073419e-01   2.928335e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.107832e-01   3.217677e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.115490e-01   3.209768e+02
 -------------------------------------------------------------------------------------------------
-  1.051527 seconds (1.28 M allocations: 70.637 MiB, 96.27% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 3 July 2023 10:18">Monday 3 July 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.777913 seconds (1.27 M allocations: 70.507 MiB, 7.10% gc time, 96.35% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 3 July 2023 10:46">Monday 3 July 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
